# ascia

./: .gitignore  Cargo.toml  LICENSE  README.md  cube.json  cube_0.json  cube_15616.json  cube_37.json  cube_7634.json
examples/: cube.rs  example1.rs  example2.rs  particle_test.rs  particle_test_arg.rs  particle_test_board.rs  particle_test_sphere.rs  priority_test.rs  teapot.rs  teapot_bezier1.tris.txt  test1.rs
gif/: memo.txt
src/: ascia.rs  lib.rs
src/ascia/: camera.rs  camera_gpu.rs  camera_wgpu.rs  charmapper.rs  color.rs  core.rs  lights.rs  math.rs  primitives.rs  raycaster.rs  simple_raytracing_renderer.wgsl  simple_raytracing_renderer_bvh.wgsl  simple_raytracing_renderer_naive_bvh.wgsl  util.rs
