[package]
name = "ascia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.0"
pollster = "0.3.0"
futures-intrusive = "0.5.0"

[dev-dependencies]
termios = "0.3"
rand = "0.8.5"
bytemuck = "1.13.1"
