[package]
name = "ascia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19.0", optional = true }
pollster = { version = "0.3.0", optional = true}
futures-intrusive = { version = "0.5.0", optional = true }
serde = { version = "1.0.197", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
termios = { version = "0.3" , optional = true}

[dev-dependencies]
rand = "0.8.5"
bytemuck = "1.13.1"

[features]
default = []
wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
termios-controller = ["dep:termios"]
export = ["dep:serde", "dep:serde_json"]
